# Blockchain

./: .gitignore  CHANGELOG.md  README.md  blockchain_docs.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-canonical-serialization.md  0002-account-model.md  0003-most-work-fork-choice.md  0004-derived-tip-and-trusted-load.md  0005-acceptance-only-timestamp-drift.md  0006-data-format-compatibility.md  0007-canonical-address-validity.md  0008-local-network-path-containment.md  0009-full-store-validation.md  0010-node-lifecycle-identity.md  0011-failure-atomic-startup.md  0012-fail-closed-process-identity.md  README.md
schema/: README.md  local-network.schema.json  mempool.schema.json  merkle-proof.schema.json  node-lifecycle.schema.json  node-readiness.schema.json  transaction.schema.json  wallet.schema.json
schema/examples/: block-header.example.json
src/toychain/: __init__.py  __main__.py  block.py  chain.py  cli.py  codec.py  consensus.py  constants.py  crypto.py  debug.py  errors.py  json_validation.py  mempool.py  merkle.py  (+7 more)
tests/: conftest.py  kill_helpers.py  test_address_validation_imports.py  test_audit_ports_metadata_status.py  test_chain_mempool_consensus.py  test_codec_crypto_merkle.py  test_codec_parser_edges.py  test_json_schemas.py  test_limits.py  test_local_network_preflight.py  test_local_network_registry.py  test_local_network_rollback.py  test_local_network_shutdown_resilience.py  test_persistence_cli_process.py  test_process_identity.py  test_process_zombie_liveness.py  test_startup_atomicity.py  test_validate_all_blocks.py
(+9 files in other folders)
