[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "toychain-capstone"
version = "1.0.0"
description = "Educational CLI blockchain with canonical bytes, Ed25519, Merkle proofs, PoW, forks, and local node processes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["cryptography>=42", "jsonschema>=4.23"]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10"]

[project.scripts]
toychain = "toychain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toychain = ["py.typed", "schema/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src/toychain"]
strict = false
warn_unused_ignores = true

